grammar.js
    source_file: ($) =>
      seq(
        optional($.package_clause),
        repeat(choice(seq($._top, $._semi), ";")),
      ),

    _semi: ($) => choice(";", $.automatic_semicolon),
    package_clause: ($) =>
      seq(
        optional(field("docs", $.doc_comment)),
        alias("package", $.keyword),
        field("name", $.identifier_list),
      ),

    _top: ($) =>
      choice($.use_statement, $._top_level_statement, $._top_level_declaration),

    // Top-level statements
    use_statement: ($) =>
      prec.right(
        seq(
          alias("use", $.keyword),
          field("package_name", $.identifier_list),
          optional($._use_stmt_body),
        ),
      ),

    identifier_list: ($) => $._identifier_list,

    _use_stmt_body: ($) =>
      seq(
        "{",
        commas(
          $,
          seq(
            $._use_stmt_body_term,
            optional(seq(alias("::", $.operator), $._use_stmt_body_term)),
          ),
        ),
        "}",
      ),

    binding_declaration: ($) =>
      seq(
        prec.right(
          1,
          seq(
            field("name", alias($.identifier, $.const_identifier)),
            alias("::", $.operator),
            field("value", choice(
              $._expression,
              $.function_definition,
              $.quick_function_definition,
              $.macro_definition,
              $.struct_type,
              $.union_type,
              $.enum_type,
            )),
          ),
        ),
      ),

    match_declaration: ($) =>
      seq(
        alias("#match", $.compiler_directive),
        optional(seq("->", field("expected_type", $._type))),
        repeat(
          choice(
            alias("#locked", $.compiler_directive),
            alias("#local", $.compiler_directive),
          ),
        ),
        "{",
        commas($, $._expression),
        "}",
      ),

    _type: ($) => choice(alias($._proc_type, $.proc_type), $._non_proc_type),

    struct_type: ($) =>
      seq(
        alias("struct", $.keyword),
        optional(field("parameters", $.parameter_list)),
        repeat(alias($._struct_directives, $.compiler_directive)),
        "{",
        body($, choice($.binding_declaration, $.struct_field_declaration)),
        "}",
      ),

    _struct_directives: ($) =>
      choice(
        "#pack",
        "#union",
        seq("#size", $._expression),
        seq("#align", $._expression),
      ),

    struct_field_declaration: ($) =>
      seq(
        repeat($.tag),
        optional(alias("use", $.keyword)),
        $._ident_list,
        alias(":", $.operator),
        choice(
          field("type", $._type),
          seq(
            optional(field("type", $._type)),
            alias("=", $.operator),
            field("value", $._expression),
          ),
        ),
      ),

    enum_type: ($) =>
      seq(
        alias("enum", $.keyword),
        repeat(alias($._enum_directives, $.compiler_directive)),
        optional(seq("(", field("backing_type", $.identifier), ")")),
        "{",
        body($, $.enum_value_declaration),
        "}",
      ),

    _enum_directives: ($) => "#flags",

    enum_value_declaration: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq("::", field("value", $._expression))),
      ),

    _ident_list: ($) => list1($._comma, $.identifier),

    parameter_list: ($) =>
      prec.left(seq("(", commas($, field("parameter", $.parameter)), ")")),

    parameter: ($) =>
      prec.left(
        seq(
          field("is_used", optional(alias("use", $.keyword))),
          optional(field("baked", "$")),
          $._ident_list,
          ":",
          choice(
            field("type", $._type),
            seq(
              optional(field("type", $._type)),
              alias("=", $.operator),
              field("value", $._expression),
            ),
          ),
        ),
      ),

    function_header: ($) =>
      prec.left(
        seq(
          $.parameter_list,
          optional(
            choice(
              "=>",
              seq(
                "->",
                choice(
                  alias($._type, $.return_type),
                  seq(
                    "(",
                    repeat1(
                      prec.left(
                        12,
                        seq(
                          optional(seq($.identifier, ":")),
                          alias($._type, $.return_type),
                        ),
                      ),
                    ),
                    ")",
                  ),
                ),
                repeat($.function_directive),
              ),
            ),
          ),
        ),
      ),

    function_definition: ($) =>
      prec(
        2,
        seq($.function_header, alias($.block, $.function_body)),
      ),

    _curly_block: ($) =>
      seq("{", body($, $._statement), "}"),

    block: ($) =>
      choice(
        alias($._curly_block, $.block),
        seq(alias("do", $.keyword), $._statement),
        "---",
      ),

    _statement: ($) =>
      choice(
        $.block,
        $.declaration,
        $.assignment,
        $.if_statement,
        $.while_statement,
        $.for_statement,
        $.switch_statement,
        $.case_statement,
        $.break_statement,
        $.continue_statement,
        $.fallthrough_statement,
        $.return_statement,
        $.defer_statement,
        $.use_statement,
        $.binding_declaration,
        $.procedural_if_directive,
        $._expression,
      ),

    return_statement: ($) =>
      prec.left(
        seq(
          repeat1(alias("return", $.keyword)),
          optional(alias("#from_proc", $.compiler_directive)),
          optional($._expression_list),
        ),
      ),

    if_statement: ($) =>
      prec.right(
        seq(
          alias("if", $.keyword),
          optional(seq(field("initializer", $._statement), $._semi)),
          field("condition", $._expression),
          field("if_true", $.block),
          repeat(
            seq(
              alias("elseif", $.keyword),
              field("condition", $._expression),
              $.block,
            ),
          ),
          optional(
            seq(
              alias("else", $.keyword),
              field("if_false", $.block),
            ),
          ),
        ),
      ),

    _expression_list: ($) => prec.left(list1($._comma, $._expression)),

    _expression: ($) => prec.right(1, choice($._factor, $.binary_expression)),

    argument: ($) => seq(optional(seq($.identifier, "=")), $._expression),

    binary_expression: ($) => {
      const table = [
        [op_prec.control_flow, choice(...special_operators)],
        [op_prec.multiplicative, choice(...multiplicative_operators)],
        [op_prec.additive, choice(...additive_operators)],
        [op_prec.comparison, choice(...comparison_operators)],
        [op_prec.range, choice("..", "..=")],
        [op_prec.and, "&&"],
        [op_prec.or, "||"],
      ];
      return choice(
        ...table.map(([p, o]) =>
          prec.left(
            p,
            seq(
              field("left", $._expression),
              field("operator", alias(o, $.operator)),
              field("right", $._expression),
            ),
          ),
        ),
      );
    },

    // Useful helpers
    identifier: ($) => token(seq(letter, repeat(choice(letter, unicodeDigit)))),
    _identifier_list: ($) =>
      prec.right(seq($.identifier, repeat(seq(".", $.identifier)))),

    _true: ($) => "true",
    _false: ($) => "false",
    bool_literal: ($) => choice($._true, $._false),
    int_literal: ($) => token(intLiteral),

    string_literal: ($) =>
      choice(
        $.multi_line_string,
        seq(
          '"',
          repeat(
            choice(token.immediate(prec(1, /[^"\n\\]+/)), $.escape_sequence),
          ),
          '"',
        ),
      ),
